tests/parsing-test/test_out/one-line-struct.txt
error: expected Ident but got 'pub'
 --> \\?\C:\src\rust\catalyst\tests\parsing-test\one-line-struct\package.ctlm:1:1
  |
1 | pub
  | ^^^ token located here
  |
  = info: manifest -> manifest field -> name

